--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "npm run eslint"
   },
   "devDependencies": {
-    "eslint": "6.1.0",
+    "babel-eslint": "^10.0.3",
+    "css-loader": "3.2.0",
+    "eslint": "^6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
     "moment-locales-webpack-plugin": "^1.1.0",
+    "style-loader": "1.0.0",
     "webpack": "4.39.1",
     "webpack-cli": "3.3.6",
     "webpack-dev-server": "3.7.2"
@@ -21,6 +24,7 @@
     "node": "10"
   },
   "dependencies": {
+    "flatpickr": "4.6.2",
     "moment": "^2.24.0"
   }
 }
